PROJECT(framewars)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)

FLEX_TARGET(RedcodeScanner ${CMAKE_CURRENT_SOURCE_DIR}/redcode.l ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
BISON_TARGET(RedcodeParser ${CMAKE_CURRENT_SOURCE_DIR}/redcode.y ${CMAKE_CURRENT_BINARY_DIR}/redcode.tab.c)
ADD_FLEX_BISON_DEPENDENCY(RedcodeScanner RedcodeParser)

FILE(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC} ${BISON_RedcodeParser_OUTPUTS} ${FLEX_RedcodeScanner_OUTPUTS})

